# mcp-drift-lab

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  TEST_PLAN.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: ETHICS.md
evidence/: README.md  results-template.csv
manifests/: v0-benign.json  v1-description-mutation.json  v2-schema-mutation.json  v3-tool-addition.json  v4-unicode-tag-concealment.json  v5-behavior-only.json
scenarios/: scenarios.yaml
src/mcp_drift_lab/: __init__.py  cli.py  hashing.py  manifests.py  server.py  sink.py  stdio_proxy.py
state/: current.json
tests/: test_manifests.py  test_server.py  test_sink.py  test_stdio_proxy.py
